--- a/semantic_html/semantic.html
+++ b/semantic_html/semantic.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic</title>
 </head>
 <body>
-    <nav>Menus!!</nav>
-    <article>
+    <nav><a href="">Product</a> |
+        <a href="">service</a> |
+        <a href="">Contact</a> |
+    </nav>
+    <article class="mogyi">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
@@ -25,7 +28,8 @@
             Consectetur adipiscing elit.
         </p>
         <figure>
-
+            <img src="auto.jpeg" alt="Auto" style="width: 20%">
+            <figcaption>This is an important vehicle</figcaption>
         </figure>
     </article>
     <aside>
@@ -33,5 +37,8 @@
             Consectetur adipiscing mamamamamamamama.
         </p>
     </aside>
+    <footer>
+        <p>Author: Roland Papp 2023</p>
+      </footer>
 </body>
 </html>
