--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Welkom!</h1>
+<body><section> 
+    <article class="box">A</article>
+    <article class="box">B</article>
+    <article class="box">C</article>
+</section>
 </body>
 </html>
