--- a/semantic_html/semantic.html
+++ b/semantic_html/semantic.html
@@ -29,7 +29,7 @@
         </p>
         <figure>
             <img src="auto.jpeg" alt="Auto" style="width: 20%">
-            <figcaption>This is an important vehicle</figcaption>
+            <figcaption>This is an important vehicle!!</figcaption>
         </figure>
     </article>
     <aside>
