--- a/Web-Projekt/htdocs/kontakt.html
+++ b/Web-Projekt/htdocs/kontakt.html
@@ -58,7 +58,7 @@
                             <td>Haarlem, abc 1.</td>
                         </tr>
                         <tr>
-                            <td>InHolland Hogeschool</td>
+                            <td>InHolland Hogeschoolg</td>
                         </tr>
                     </table>
                 </div>
